samples/_failures_safe/1761462800_8f0853_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c30ea17c.c: In function ‘main’:
./samples/SAFE/__tmp_c30ea17c.c:158:22: error: expected ‘;’ at end of input
  158 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_c30ea17c.c:158:5: error: expected declaration or statement at end of input
  158 |     for (int i = 0; i
      |     ^~~
